--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </head>
 
         <body>
+            <img class="logo" src="picture6.jpeg" alt="logo "  height="150"> 
             <!-- glass background -->
             <section id="glass"> </section>
 
@@ -32,7 +33,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
 
         <p> welcome to my page</p>
